--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,18 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "db:clear": "node scripts/clear-db.js",
+    "db:seed": "node scripts/seed-db.js",
+    "db:reset": "node scripts/reset-db.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.13.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
